# genai-opt

./: .gitignore  .pre-commit-config.yaml  AI_USAGE_LOG.md  CHANGELOG.md  DEVELOPMENT_LOG.md  LICENSE  README.md  cicd.md  dev-guide.md  git-versioning-guide.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: release.yml  tests.yml
docs/: api.md  development.md  getting-started.md  index.md
src/genai_opt/: __init__.py  env.py  module1.py  module2.py
src/genai_opt/adapters/: __init__.py
src/genai_opt/adapters/genomes/: simple_system_prompt_genome.py
src/genai_opt/adapters/simple_system_prompt_genome/: __init__.py  functions.py  genome.py  helpers.py  types.py
src/genai_opt/experiments/: __init__.py  float_genome.py  haiku_experiment.py  simple_experiment.py
src/genai_opt/optimizer_engine/: __init__.py  engine.py  engine_config.py  engine_state.py  experiment_builder.py  genome.py  iteration_metadata.py  operation.py  operation_record.py  population.py  serialization.py
src/genai_opt/optimizer_engine/checkpointer/: __init__.py  checkpointer.py  filesystem.py
src/genai_opt/optimizer_engine/convergence_criterion/: __init__.py  convergence_criterion.py
src/genai_opt/optimizer_engine/experiment_controller/: __init__.py  experiment_controller.py  terminal_controller.py
src/genai_opt/optimizer_engine/initial_population/: __init__.py  initial_population_strategy.py
src/genai_opt/optimizer_engine/metrics_collector/: __init__.py  metrics_collector.py  terminal_logger.py
src/genai_opt/optimizer_engine/mutation_policy/: __init__.py  mutation_policy.py
src/genai_opt/optimizer_engine/reproduction_policy/: __init__.py  parent_selection.py  reproduction_policy.py  reproduction_strategy.py
src/genai_opt/optimizer_engine/utils/: types.py  typevars.py
tests/: test_env.py  test_genai_opt.py  test_haiku_experiment.py  test_initial_population_strategy.py  test_simple_experiment.py
tests/edge_cases/: test_edge_cases.py
tests/integration/: test_engine.py  test_experiment_builder.py
tests/unit/: test_adapter_functions.py  test_convergence_criterion.py  test_float_genome.py  test_genome_serialization.py  test_iteration_metadata.py  test_metrics_collector.py  test_mutation_policy.py  test_operation.py  test_parent_selection.py  test_population.py  test_reproduction_strategy.py  test_serialization.py
