[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-opt"
version = "0.1.0"
description = "A Python library for GenAI optimization."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = []
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.15.20", "pytest-cov>=4.0", "mkdocs>=1.6", "pre-commit"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, variables, etc.)
    "I",   # isort (import ordering)
    "N",   # pep8 naming conventions
    "B",   # bugbear (common logic mistakes)
    "C4",  # flake8-comprehensions (simplify list/dict expressions)
    "UP",  # pyupgrade (outdated syntax)
    "RUF", # ruff-specific rules
]
ignore = [
    "N817",
    "UP046",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
